deprecación de varios metodos, redundancias y creacion de metodos verificar por todo el menu.