@@ -1,14 +1,18 @@
 package main;
 
+import java.time.LocalDate;
+import java.util.InputMismatchException;
 import java.util.Scanner;
 
 import enumerators.ETipoMedida;
+import excepciones.InvalidDNIException;
 import excepciones.InvalidDateException;
 
 import almacenamiento.*;
 import clientes.*;
 import empleados.*;
 import enumerators.Membresia;
+import excepciones.InvalidLengthException;
 import gestion.Gestion;
 import gestion.JsonGestor;
 import registros.CV;
@@ -21,14 +25,14 @@ public class Main {
 	static Gestion<Administrativo> administrativo = new Gestion<>();
 	static Gestion<Personal> personal = new Gestion<>();
 	static Gestion<Almacenamiento> almacenamiento = new Gestion<>();
-	
+
 	private static Mostrador m = new Mostrador();
-	
+
 	private final static String archivoPersonal = "personal.json";
 	private final static String archivoAdministrativo = "administrativo.json";
 	private final static String archivoAlmacenamiento = "almacenamiento.json";
 	private final static String archivoMostrador = "mostrador.json";
-	
+
 	// Menu del sistema.
 	public static void main(String[] args) {
 		Scanner input = new Scanner(System.in);
@@ -37,24 +41,27 @@ public class Main {
 		personal.getListaGestora().addAll(JsonGestor.cargarListaJSON(archivoPersonal));
 		administrativo.getListaGestora().addAll(JsonGestor.cargarListaJSON(archivoAdministrativo));
 		almacenamiento.getListaGestora().addAll(JsonGestor.cargarListaJSON(archivoAlmacenamiento));
-		
+
 		char continuar;
 		do {
-			switch (bienvenida()) {
+			System.out.println("------Bienvenido----\ningrese su area:\n(1)-Personal\n(2)-Administrativo\n(3)-Gestor\n(0)-salir");
+			switch (validarInt(0,3)) {
 				case 1:
 					menuPersonal();
 					break;
-					
+
 				case 2:
 					menuAdministrativo();
 					break;
-					
+
 				case 3:
-					menuGestor();				
+					menuGestor();
 					break;
+
 				case 0:
 					System.out.println("Hasta pronto...");
 					break;
+
 				default:
 					System.out.println("Opcion invalida cerrando...");
 					break;
@@ -63,17 +70,18 @@ public class Main {
 			continuar = input.nextLine().toLowerCase().charAt(0);
 		}while (continuar == 's');
 	}
-	
- 	private static void menuPersonal()
+
+	private static void menuPersonal()
 	{
 		Scanner input = new Scanner(System.in);
 		char continuar;
 
 		do {
-			int seleccion = seleccionPersonal();
+			System.out.println("Seleccione su area:\n(1)-Cajero\n(2)-Limpiador\n(3)-Repositor");
+			int seleccion = validarInt(3);
+
 			System.out.println("Ingrese su DNI: ");
-			int dni = input.nextInt();
-			input.nextLine();
+			int dni = validarDNI();
 
 			Personal encontrado = null;
 			for (Personal entry : personal.getListaGestora()) {
@@ -89,34 +97,30 @@ public class Main {
 
 			switch (seleccion) {
 				case 1:
-					
-					if (encontrado instanceof Cajero) {
-						Cajero c  = (Cajero) encontrado;
+					if (encontrado instanceof Cajero c) {
 						System.out.println("Bienvenido/a " + c.getNombre() + "!");
 						menuCajero(c);
-					} else {
+					} else
 						System.out.println("Ese dni no corresponde a su area");
-					}
-
 					break;
+
 				case 2:
-					if (encontrado instanceof Limpiador) {
-						Limpiador l = (Limpiador) encontrado;
+					if (encontrado instanceof Limpiador l) {
 						System.out.println("Bienvenido/a " + l.getNombre() + "!");
 						menuLimpiador(l);
-					} else {
+					} else
 						System.out.println("Ese dni no corresponde a su area");
-					}
 					break;
+
 				case 3:
-					if (encontrado instanceof Repositor) {
-						Repositor r = (Repositor) encontrado;
+					if (encontrado instanceof Repositor r) {
 						System.out.println("Bienvenido/a " + r.getNombre() + "!");
 						menuRepositor(r);
 					} else {
 						System.out.println("Ese dni no corresponde a su area");
 					}
 					break;
+
 				default:
 					System.out.println("No se encontro el Personal con el dni");
 					break;
@@ -125,169 +129,156 @@ public class Main {
 			continuar = input.nextLine().toLowerCase().charAt(0);
 		}while (continuar == 's');
 	}
-	private static void menuCajero(Cajero c)
-	{
+
+	private static void menuCajero(Cajero c) {
 
 		Scanner input = new Scanner(System.in);
-		char continuar = 'n';
+		char continuar;
 		do {
-			switch(opcionCajero())
-			{
+			System.out.println("Ingrese una opcion\n(1)-Listar ventas\n(2)-Atender cliente\n(3)-Agregar miembro\n(0) Salir");
+			switch(validarInt(3)) {
+
 				case 1:
 					System.out.println(c.listarVentas());
 					break;
+
 				case 2:
-					char miembroContinuar = 's', cliente = 'n';
+					char continuarAtendiendo, cliente;
 					System.out.println("El cliente es miembro?(s/n)");
 					cliente = input.nextLine().toLowerCase().charAt(0);
 
 					System.out.println("recibiendo productos: ");
-					while(miembroContinuar == 's')
-					{
-						// Ingreso de los productos a vender
+					do{// Ingreso de los productos a vender
+
 						System.out.println("Ingrese el codigo del producto");
-						String codigo = input.nextLine();
+						String codigo = validarString(36, 36);
+
 						System.out.println("Ingrese la cantidad a vender del mismo");
-						int cant = input.nextInt();
-						input.nextLine();
+						int cant = validarInt();
+
 						c.venderProducto(codigo, cant);
 						System.out.println("Desea seguir vendiendo productos? (s/n)");
-						miembroContinuar = input.nextLine().toLowerCase().charAt(0);
+						continuarAtendiendo	 = input.nextLine().toLowerCase().charAt(0);
 						m.toJson(archivoMostrador);
-					}
-					if(cliente == 's')
-					{
+					} while(continuarAtendiendo == 's');
+
+					if(cliente == 's') {
 						System.out.println("Ingrese el DNI del cliente miembro:");
-						int dni = input.nextInt();
-						input.nextLine();
+						int dni = validarDNI();
 						c.atenderMiembro(c.buscarMiembro(dni));
-					}
-					else
-					{
-						c.atenderCliente();
-					}
+
+					} else c.atenderCliente();
+
 					System.out.println(c.registrarCompras());
 					break;
+
 				case 3:
 					System.out.println("Ingrese el nombre del nuevo cliente");
-					String nombre = input.nextLine();
+					String nombre = validarString(3,12);
 					System.out.println("Ingrese el dni del nuevo cliente");
-					int dni = input.nextInt();
-					System.out.println("Seleccione el nivel de membresía:");
-					System.out.println("(1) Cobre");
-					System.out.println("(2) Plata");
-					System.out.println("(3) Oro");
-
+					int dni = validarDNI();
 					Membresia membresia = opcionMembresia();
+
 					c.agregarCliente(new Cliente(nombre,dni,new TarjetaMembresia(membresia)));
 					break;
 			}
+
 			System.out.println("Desea salir?(s/n)");
 			continuar = input.nextLine().toLowerCase().charAt(0);
-
 		}while(continuar=='n');
 	}
-	private static Membresia opcionMembresia()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese una opcion: ");
-		System.out.println("(1)-Membresia cobre");
-		System.out.println("(2)-Membresia plata");
-		System.out.println("(3)-Membresia oro");
-		int nivelMembresia = input.nextInt();
-		input.nextLine();
-		Membresia m = null;
-		switch(nivelMembresia)
-		{
+
+	private static Membresia opcionMembresia() {
+		System.out.println("""
+                            Seleccione el nivel de membresía:
+                            (1) Cobre
+                            (2) Plata
+                            (3) Oro""");
+
+		switch(validarInt(1,3)) {
 			case 1:
-				m = Membresia.cobre;
-				break;
+				return Membresia.cobre;
+
 			case 2:
-				m = Membresia.plata;
-				break;
+				return Membresia.plata;
+
 			case 3:
-				m = Membresia.oro;
-				break;
+				return Membresia.oro;
+
+			default:
+				return null;
 		}
-		return m;
 	}
-	private static int opcionCajero()
-	{
+
+	private static void menuLimpiador(Limpiador l) {
 		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese una opcion");
-		System.out.println("(1)-Listar ventas");
-		System.out.println("(2)-Atender cliente");
-		System.out.println("(3)-Agregar miembro");
-		System.out.println("(0) Salir");
-		return input.nextInt();
-	}
-	private static void menuLimpiador(Limpiador l)
-	{
-		Scanner input = new Scanner(System.in);
-		char continuar = 's';
+		char continuar;
 		do {
-			switch(opcionLimpiador())
-			{
+			System.out.println("""
+                Ingresar una opcion
+                (1)-Listar estanterias sucias
+                (2)-Confirmar estanteria limpia
+                (3)-Confirmar tienda limpia""");
+			switch(validarInt(1,3)) {
+
 				case 1:
-					System.out.println(l.listarEstanteriasSucias(almacenamiento.getListaGestora().get(0)));
+					System.out.println(l.listarEstanteriasSucias(almacenamiento.getListaGestora().getFirst()));
 					break;
+
 				case 2:
 					System.out.println("ingrese la id de la estanteria limpiada:");
-					String id = input.nextLine();
-					l.confirmarEstanteriaLimpiada(l.buscarEstanteria(almacenamiento.getListaGestora().get(0), id));
+					String id = validarString(36,36);
+					l.confirmarEstanteriaLimpiada(l.buscarEstanteria(almacenamiento.getListaGestora().getFirst(), id));
 					break;
+
 				case 3:
 					if(l.confirmarTiendaLimpiada(m))
-					{
 						System.out.println("Tienda limpia!");
-					}
 					else
-					{
 						System.out.println("La tienda no esta sucia!");
-					}
 					break;
+
 				default:
 					System.out.println("La opcion seleccionada no coincide con una disponible!");
 					break;
 			}
+
 			System.out.println("Desea realizar alguna otra opcion?(s/n)");
 			continuar = input.nextLine().toLowerCase().charAt(0);
 		}while(continuar == 's');
+	}
 
-	}
-	private static int opcionLimpiador()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingresar una opcion");
-		System.out.println("(1)-Listar estanterias sucias");
-		System.out.println("(2)-Confirmar estanteria limpia");
-		System.out.println("(3)-Confirmar tienda limpia");
-		return input.nextInt();
-	}
-	private static void menuRepositor(Repositor r)
-	{
+	private static void menuRepositor(Repositor r) {
 		Scanner input = new Scanner(System.in);
 
-		char continuar = 's';
-		do
-		{
-			switch(opcionRepositor())
-			{
+		char continuar;
+		do {
+			System.out.println("""
+                Ingrese una opcion:
+                (1)-Listar estantes
+                (2)-Reponer producto
+                (3)-Hacer inventario""");
+			switch(validarInt(1,3)) {
+
 				case 1:
-					System.out.println(r.listarEstantes(almacenamiento.getListaGestora().get(0)));
+					System.out.println(r.listarEstantes(almacenamiento.getListaGestora().getFirst()));
 					break;
+
 				case 2:
 					System.out.println("Ingrese el codigo de la estanteria: ");
-					String codigoEstanteria = input.nextLine();
+					String codigoEstanteria = validarString(36,36);
+
 					System.out.println("Ingrese el codigo del producto: ");
-					String codigoProducto = input.nextLine();
+					String codigoProducto = validarString(36,36);
+
 					System.out.println("Ingrese la cantidad del producto a reponer: ");
-					int cant = input.nextInt();
-					input.nextLine();
-					r.reponerProducto(m, almacenamiento.getListaGestora().get(0).buscarEstanteriaPorID(codigoEstanteria), codigoProducto, cant);
+					int cant = validarInt();
+
+					r.reponerProducto(m, almacenamiento.getListaGestora().getFirst().buscarEstanteriaPorID(codigoEstanteria), codigoProducto, cant);
 					m.toJson(archivoMostrador);
 					JsonGestor.guardarListaJSON(almacenamiento.getListaGestora(), archivoAlmacenamiento);
 					break;
+
 				case 3:
 					r.contarStock();
 					System.out.print("Inventario hecho!");
@@ -297,28 +288,23 @@ public class Main {
 			continuar = input.nextLine().toLowerCase().charAt(0);
 		}while(continuar == 's');
 	}
-	private static int opcionRepositor()
-	{
-		Scanner input = new Scanner(System.in);
-
-		System.out.println("Ingrese una opcion:");
-		System.out.println("(1)-Listar estantes");
-		System.out.println("(2)-Reponer producto");
-		System.out.println("(3)-Hacer inventario");
-		return input.nextInt();
-	}
 
 	private static void menuAdministrativo(){
 
 		Scanner input = new Scanner(System.in);
-		char continuar ='s';
+		char continuar;
 
 		do {
-			int seleccion = seleccionAdministrativo();
+			System.out.println("""
+                    Seleccione su area:
+                    (1)-Secretario
+                    (2)-RRHH
+                    (0)-salir""");
+			int seleccion = validarInt(0,2);
 			System.out.println("Ingrese su correo: ");
-			String correo = input.nextLine();
+			String correo = validarCorreo();
 			System.out.println("Ingrese su contrasenia: ");
-			String contrasenia = input.nextLine();
+			String contrasenia = validarString(6,24);
 
 			Administrativo encontrado = null;
 			for (Administrativo entry : administrativo.getListaGestora()) {
@@ -334,23 +320,21 @@ public class Main {
 
 			switch (seleccion) {
 				case 1:
-					Secretario s = new Secretario();
+					Secretario s;
 					if (encontrado instanceof Secretario) {
 						s = (Secretario) encontrado;
 						System.out.println("Bienvenido " + s.getNombre() + "!");
 						menuSecretario(s);
 					}
 					break;
+
 				case 2:
-					RRHH r = new RRHH();
+					RRHH r;
 					if (encontrado instanceof RRHH) {
 						r = (RRHH) encontrado;
 						System.out.println("Bienvenido " + r.getNombre() + "!");
 						menuRRHH(r);
 					}
-
-					break;
-				default:
 					break;
 			}
 			System.out.println("Desea intentar con otra cuenta?(s/n)");
@@ -360,9 +344,17 @@ public class Main {
 
 	private static void menuSecretario(Secretario s) {
 		Scanner input = new Scanner(System.in);
-		char continuar = 's';
+		char continuar;
 		do {
-			switch(opcionSecretario())
+			System.out.println("""
+                    Ingrese una opcion
+                    (1)-Agendar entrevista
+                    (2)-Dar de baja una entrevista
+                    (3)-Dar de baja curriculum
+                    (4)-Listar entrevistas
+                    (5)-Listar curriculums
+                    (6)-cambiar contraseña""");
+			switch(validarInt(1,6))
 			{
 				case 1:
 					s.agendarEntrevista(crearEntrevista());
@@ -370,71 +362,65 @@ public class Main {
 					break;
 				case 2:
 					System.out.println("Ingrese el dia:");
-					int dia = input.nextInt();
-					input.nextLine();
+					int dia = validarInt(1,30);
+
 					System.out.println("Ingrese el mes:");
-					int mes = input.nextInt();
-					input.nextLine();
+					int mes = validarInt(1,12);
+
 					System.out.println("Ingrese el anio:");
-					int anio = input.nextInt();
-					input.nextLine();
+					int anio = validarInt(1950, LocalDate.now().getYear());
+
 					System.out.println("Ingrese el hora:");
-					int hora = input.nextInt();
-					input.nextLine();
+					int hora = validarInt(23);
+
 					System.out.println("Ingrese el minutos:");
-					int minutos = input.nextInt();
-					input.nextLine();
+					int minuto = validarInt(59);
 
-
-					if(s.darDeBajaEntrevista(dia, mes, anio, hora, minutos))
-					{
-						System.out.println("entrevista eliminada exitosamente!");
-					}
+					if(s.darDeBajaEntrevista(dia, mes, anio, hora, minuto))
+						System.out.println("Entrevista eliminada exitosamente!");
 					else
-					{
-						System.out.println("no se pudo dar de baja la entrevista");
-					}
+						System.out.println("No se pudo dar de baja la entrevista");
 					break;
+
 				case 3:
 					System.out.println("Ingrese el dni para buscar el curriculum:");
-					int dni = input.nextInt();
-					input.nextLine();
-					if(s.descartarCV(s.buscarCv(dni)))
-					{
+					int dni = validarDNI();
+
+					if(s.descartarCV(s.buscarCv(dni))) {
 						System.out.println("El dni se borro con exito");
-					}
-					else
-					{
+					} else {
 						System.out.println("No se pudo descartar el cv");
 					}
 					break;
+
 				case 4:
 					System.out.println(s.listarEntrevistas());
 					break;
+
 				case 5:
 					System.out.println(s.listarCV());
 					break;
+
 				case 6:
 					System.out.println("ingrese su correo");
-					String correo = input.nextLine();
+					String correo = validarCorreo();
 					System.out.println("ingrese su contraseña");
 					String contrasenia = input.nextLine();
-					if(s.verificarCorreo(correo) && s.verificarContrasenia(contrasenia))
-					{
+					if(s.verificarCorreo(correo) && s.verificarContrasenia(contrasenia)) {
 						System.out.println("ingrese su ingrese su nueva contraseña");
 						String nuevaContrasenia = input.nextLine();
 						s.cambiarContrasenia(contrasenia, nuevaContrasenia);
-					}
-					else
-					{
-						System.out.println("correo o contraseña invalidas");
+					} else {
+						System.out.println("Correo o contraseña invalidas");
 					}
 
 					break;
+
 				default:
-					System.out.println("Ninguna opcion es una disponible");
+					System.out.println("No se selecciono una opcion dentro del rango");
 					break;
 			}
+
 			System.out.println("Desea continuar?(s/n)");
 			continuar = input.nextLine().toLowerCase().charAt(0);
 		}while(continuar == 's');
@@ -447,257 +433,228 @@ public class Main {
 	 */
 	private static Entrevista crearEntrevista() {
 
-			Scanner input = new Scanner(System.in);
-			System.out.println("Ingrese el dia");
-			int dia = input.nextInt();
-			input.nextLine();
-			System.out.println("Ingrese el mes");
-			int mes = input.nextInt();
-			input.nextLine();
-			System.out.println("Ingrese el anio");
-			int anio = input.nextInt();
-			input.nextLine();
-			System.out.println("Ingrese la hora");
-			int hora = input.nextInt();
-			input.nextLine();
-			System.out.println("Ingrese el minuto");
-			int minuto = input.nextInt();
-			input.nextLine();
+		System.out.println("Ingrese el dia");
+		int dia = validarInt(1,30);
 
-			CV cv = crearCurriculum();
+		System.out.println("Ingrese el mes");
+		int mes = validarInt(1,12);
 
-			System.out.println("Ingrese una obvservacion");
-			String informe = input.nextLine();
+		System.out.println("Ingrese el anio");
+		int anio = validarInt(1950,LocalDate.now().getYear());
+
+		System.out.println("Ingrese la hora");
+		int hora = validarInt(23);
+
+		System.out.println("Ingrese el minuto");
+		int minuto = validarInt(59);
+
+		CV cv = crearCurriculum();
+
+		System.out.println("Ingrese una obvservacion");
+		String informe = validarString(1,250);
 
 		try{
 			return new Entrevista(dia,mes,anio,hora,minuto,cv,informe);
 
 		}catch (InvalidDateException ide){
-			ide.getMessage();
-			return null;
+			System.out.println("Ocurrio un error insperado al intentar crear su entrevista, por favor intente de nuevo.\nError de fecha: " + ide.getMessage());
+			return crearEntrevista();
 		}
-    }
+	}
 
 	private static CV crearCurriculum()
 	{
-		Scanner input = new Scanner(System.in);
 		System.out.println("Ingrese el nombre del curriculum");
-		String nombre = input.nextLine();
+		String nombre = validarString(3,12);
+
 		System.out.println("Ingrese el apellido");
-		String apellido = input.nextLine();
+		String apellido = validarString(3,12);
+
 		System.out.println("Ingrese la edad");
-		int edad = input.nextInt();
-		input.nextLine();
+		int edad = validarInt(16,118);
+
 		System.out.println("Ingrese el dni");
-		int dni = input.nextInt();
-		input.nextLine();
+		int dni = validarDNI();
+
 		System.out.println("Ingrese el correo");
-		String correo = input.nextLine();
+		String correo = validarCorreo();
+
 		System.out.println("Ingrese el genero");
-		char genero = input.nextLine().toLowerCase().charAt(0);
+		char genero = validarGenero();
+
 		System.out.println("Ingrese el telefono");
-		String telefono = input.nextLine();
+		String telefono = validarString(10,15);
 
 		return new CV(nombre,apellido,dni,edad,telefono,correo,genero);
 	}
 
-	private static int opcionSecretario() {
-		Scanner input = new Scanner(System.in);
-
-		System.out.println("Ingrese una opcion");
-		System.out.println("(1)-Agendar entrevista");
-		System.out.println("(2)-Dar de baja una entrevista");
-		System.out.println("(3)-Dar de baja curriculum");
-		System.out.println("(4)-Listar entrevistas");
-		System.out.println("(5)-Listar curriculums");
-		System.out.println("(6)-cambiar contraseña");
-
-		return input.nextInt();
-	}
-
 	private static void menuRRHH(RRHH r) {
 		Scanner input = new Scanner(System.in);
-		switch(opcionesRRHH()) {
+		System.out.println("""
+                Ingrese una opcion
+                (1)-Actualizar entrevistas
+                (2)-Dar aumento fijo a empleado
+                (3)-Dar aumento porcentual a empleado
+                (4)-Listar entrevistas
+                (5)-Listar entrevistas pendientes
+                (6)-Cambiar contraseña""");
+		switch(validarInt(1,6)) {
+
 			case 1:
 				r.asignarEntrevistas();
 				System.out.println("Las entrevistas han sido actualizadas");
 				break;
+
 			case 2:
 				Empleado e = buscarEmpleado();
-				if(e != null)
-				{
+				if(e != null) {
 					System.out.println("Ingresar el monto a aumentar");
 					int monto = input.nextInt();
 					r.darAumento(e, monto);
-				}
-				else
-				{
+				} else {
 					System.out.println("no se encontro el empleado");
 				}
 				break;
+
 			case 3:
 				Empleado em = buscarEmpleado();
-				if(em != null)
-				{
+				if(em != null) {
 					System.out.println("Ingresar el porcentaje a aumentar");
-					int porcentaje = input.nextInt();
 					r.darAumentoPorcentaje(em, 0);
-				}
-				else
-				{
+				} else {
 					System.out.println("no se encontro el empleado");
 				}
-
 				break;
+
 			case 4:
 				System.out.println(r.listarEntrevistas());
 				break;
+
 			case 5:
 				System.out.println(r.listarEntrevistasPendientes());
 				break;
+
 			case 6:
-				System.out.println("ingrese su correo");
-				String correo = input.nextLine();
-				System.out.println("ingrese su contraseña");
-				String contrasenia = input.nextLine();
-				if(r.verificarCorreo(correo) && r.verificarContrasenia(contrasenia))
-				{
-					System.out.println("ingrese su ingrese su nueva contraseña");
+				System.out.println("Ingrese su correo");
+				String correo = validarCorreo();
+				System.out.println("Ingrese su contraseña");
+				String contrasenia = validarString(6,24);
+				if(r.verificarCorreo(correo) && r.verificarContrasenia(contrasenia)) {
+					System.out.println("Ingrese su nueva contraseña");
 					String nuevaContrasenia = input.nextLine();
 					r.cambiarContrasenia(contrasenia, nuevaContrasenia);
-				}
-				else
-				{
-					System.out.println("correo o contraseña invalidas");
+				} else {
+					System.out.println("Correo o contraseña invalidas");
 				}
 				break;
 
 			default:
-				System.out.println("La opcion elegida no coincide con una disponible");
+				System.out.println("La opcion elegida esta fuera de rango.");
 				break;
 		}
-		r.cambiarContrasenia(null, null);
 	}
-	private static int opcionesRRHH()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese una opcion");
-		System.out.println("(1)-Actualizar entrevistas");
-		System.out.println("(2)-Dar aumento fijo a empleado");
-		System.out.println("(3)-Dar aumento porcentual a empleado");
-		System.out.println("(4)-Listar entrevistas");
-		System.out.println("(5)-Listar entrevistas pendientes");
-		System.out.println("(6)-Cambiar contraseña");
 
-		return input.nextInt();
-	}
-	private static Empleado buscarEmpleado()
-	{
-		Scanner input = new Scanner(System.in);
+	private static Empleado buscarEmpleado() {
 		System.out.println("Ingrese el dni del empleado");
-		int dni = input.nextInt();
-		Empleado encontro = null;
-		for(Empleado o : personal.getListaGestora())
-		{
-			if(o.getDNI()==dni)
-			{
-				encontro = o;
+		int dni = validarDNI();
+		Empleado encontrado = null;
+
+		for(Empleado o : personal.getListaGestora()) {
+			if(o.getDNI() == dni) {
+				encontrado = o;
 			}
 		}
-		for(Empleado o : administrativo.getListaGestora())
-		{
-			if(o.getDNI()==dni)
-			{
-				encontro = o;
+		for(Empleado o : administrativo.getListaGestora()) {
+			if(o.getDNI() == dni) {
+				encontrado = o;
 			}
 		}
-		return encontro;
+		return encontrado;
 	}
+
 	private static void crearEmpleado() {
-		Scanner input = new Scanner(System.in);
-		int seleccion = tipoEmpleado();
+		System.out.println("""
+                Ingrese el tipo de empleado
+                (1)-Personal
+                (2)-Administrativo""");
+		int seleccion = validarInt(1,2);
 
 		System.out.println("Ingrese el nombre");
-		String nombre = input.nextLine();
+		String nombre = validarString(3,12);
+
 		System.out.println("Ingrese el dni");
-		int dni = input.nextInt();
-		input.nextLine();
-		System.out.println("Ingrese el genero(h/m)");
-		char genero = input.nextLine().charAt(0);
+		int dni = validarDNI();
+
+		System.out.println("Ingrese el genero(h/m/o)");
+		char genero = validarGenero();
+
 		System.out.println("Ingrese el salario");
-		int salario = input.nextInt();
-		input.nextLine();
+		int salario = validarInt();
+
 		System.out.println("Ingrese el antiguedad");
-		int antiguedad = input.nextInt();
-		input.nextLine();
+		int antiguedad = validarInt();
 
 		switch (seleccion) {
+
 			case 1:
 				crearPersonal(nombre, dni, genero, salario, antiguedad);
 				break;
+
 			case 2:
 				crearAdministrativo(nombre, dni, genero, salario, antiguedad);
 				break;
-			default:
-				break;
-
 		}
 	}
-	private static int tipoEmpleado()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese el tipo de empleado");
-		System.out.println("(1)-Personal");
-		System.out.println("(2)-Administrativo");
-		return input.nextInt();
-	}
 
-	private static void crearAdministrativo(String nombre, int dni, char genero, int salario, int antiguedad){
+	private static void crearAdministrativo(String nombre, int dni, char genero, int salario, int antiguedad) {
 		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese el tipo de empleado administrativo\n(1) - Secretario\n(2) - RRHH");
+		System.out.println("""
+                Ingrese el tipo de empleado administrativo
+                (1) - Secretario
+                (2) - RRHH""");
 
-		int seleccion = input.nextInt();
+		int seleccion = validarInt(1,2);
 
 		System.out.println("Ingrese el correo del empleado: ");
-		String correo = input.nextLine();
+		String correo = validarCorreo();
 		System.out.println("Ingrese la contraseña del empleado:");
-		String contraseña = input.nextLine();
+		String contrasenia = validarString(8,24);
 
-		char continuar = 's';
+		char continuar;
 		do {
 			switch (seleccion) {
 				case 1:
-					administrativo.getListaGestora().add(new Secretario(nombre, dni, genero, salario, true, antiguedad, correo, contraseña));
+					administrativo.getListaGestora().add(new Secretario(nombre, dni, genero, salario, true, antiguedad, correo, contrasenia));
 					break;
 
 				case 2:
-					administrativo.getListaGestora().add(new RRHH(nombre, dni, genero, salario, true, antiguedad, correo, contraseña));
+					administrativo.getListaGestora().add(new RRHH(nombre, dni, genero, salario, true, antiguedad, correo, contrasenia));
 					break;
 			}
 			System.out.println("Desea continuar agregando empleados administrativos? (s/n)");
 			continuar = input.nextLine().toLowerCase().charAt(0);
-
 		}while (continuar == 's');
-
 	}
 
 	private static void crearPersonal(String nombre,int dni,char genero,int salario,int antiguedad) {
 		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese el tipo de Personal");
-		System.out.println("(1)-Cajero");
-		System.out.println("(2)-Limpiador");
-		System.out.println("(3)-Repositor");
-		int seleccion = input.nextInt();
-		input.nextLine();
-		char continuar = 's';
+		System.out.println("""
+                Ingrese el tipo de Personal
+                (1)-Cajero
+                (2)-Limpiador
+                (3)-Repositor""");
+		char continuar;
 		do {
-			switch (seleccion) {
+			switch (validarInt(1,3)) {
+
 				case 1:
 					personal.getListaGestora().add(new Cajero(m, nombre, dni, genero, salario, true, antiguedad));
 					break;
+
 				case 2:
 					personal.getListaGestora().add(new Limpiador(nombre, dni, genero, salario, true, antiguedad));
 					break;
+
 				case 3:
 					personal.getListaGestora().add(new Repositor(nombre, dni, genero, salario, true, antiguedad));
 					break;
@@ -705,303 +662,350 @@ public class Main {
 			System.out.println("Desea continuar agregando personal?(s/n)");
 			continuar = input.nextLine().toLowerCase().charAt(0);
 		}while (continuar == 's');
+	}
 
-	}
-	public static void menuGestor()
-	{
-		Scanner input = new Scanner(System.in);
+	public static void menuGestor() {
 		System.out.println("Ingrese su cuenta/correo");
-		String correo = input.nextLine();
+		String correo = validarCorreo();
+
 		System.out.println("Ingrese su contraseña");
-		String contrasenia = input.nextLine();
+		String contrasenia = validarString(8,24);
+
 		if(Gestion.validadCuenta(correo, contrasenia)) {
-			System.out.println("Bienvenido admin");
-		switch (opcionGestor())
-		{
-			case 1:
-				 menuGestorAgregar();
-				break;
-			case 2:
-				menuGestorEliminar();
-				break;
-			case 3:
-				menuGestorListar();
-				break;
-			default:
-				break;
-		}
-		JsonGestor.guardarListaJSON(personal.getListaGestora(),archivoPersonal);
-		JsonGestor.guardarListaJSON(administrativo.getListaGestora(),archivoAdministrativo);
-		JsonGestor.guardarListaJSON(almacenamiento.getListaGestora(), archivoAlmacenamiento);
-		}
-		else
-		{
+			System.out.println("""
+                    Bienvenido admin.
+                    Ingrese una opcion:
+                    (1)-Agregar
+                    (2)-Eliminar
+                    (3)-Listar""");
+			switch (validarInt(1,3)) {
+				case 1:
+					menuGestorAgregar();
+					break;
+
+				case 2:
+					menuGestorEliminar();
+					break;
+
+				case 3:
+					menuGestorListar();
+					break;
+			}
+			JsonGestor.guardarListaJSON(personal.getListaGestora(),archivoPersonal);
+			JsonGestor.guardarListaJSON(administrativo.getListaGestora(),archivoAdministrativo);
+			JsonGestor.guardarListaJSON(almacenamiento.getListaGestora(), archivoAlmacenamiento);
+		} else
 			System.out.println("La cuenta o contraseña no son correctas");
-		}
 	}
-	public static int opcionGestor()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese una opcion");
-		System.out.println("(1)-Agregar");
-		System.out.println("(2)-Eliminar");
-		System.out.println("(3)-Listar");
-		return input.nextInt();
-	}
-	public static void menuGestorListar()
-	{
-		Scanner input = new Scanner(System.in);
-		
-		System.out.println("Ingrese que lista desea ver:");
-		System.out.println("(1)-Personal");
-		System.out.println("(2)-Administrativo");
-		System.out.println("(3)-Almacenamiento");
-		System.out.println("(4)-Mostrador");
-		int seleccion = input.nextInt();
-		input.nextLine();
-		switch(seleccion)
-		{
-		case 1:
-			System.out.println(personal.listar());
-			break;
-		case 2:
-			System.out.println(administrativo.listar());
-			break;
-		case 3:
-			System.out.println(almacenamiento.listar());
-			break;
-		case 4:
-			System.out.println(Mostrador.listarArticulos());
-			break;
-			default:
+
+	public static void menuGestorListar() {
+		System.out.println("""
+                Ingrese que lista desea ver:
+                (1)-Personal
+                (2)-Administrativo
+                (3)-Almacenamiento
+                (4)-Mostrador""");
+		switch(validarInt(1,4)) {
+			case 1:
+				System.out.println(personal.listar());
+				break;
+
+			case 2:
+				System.out.println(administrativo.listar());
+				break;
+
+			case 3:
+				System.out.println(almacenamiento.listar());
+				break;
+
+			case 4:
+				System.out.println(Mostrador.listarArticulos());
 				break;
 		}
 	}
-	public static void menuGestorAgregar()
-	{
-		switch (opcionTipoObjeto())
-		{
+
+	public static void menuGestorAgregar() {
+		System.out.println("""
+                Ingrese una opcion
+                (1)-Empleado
+                (2)-Almacenamiento""");
+		switch (validarInt(1,2)) {
 			case 1:
 				crearEmpleado();
 				break;
+
 			case 2:
 				crearAlmacenamiento();
 				break;
-			default:
-				break;
 		}
 	}
-	public static void menuGestorEliminar()
-	{
-		switch (opcionTipoObjeto())
-		{
+	public static void menuGestorEliminar() {
+		System.out.println("""
+                Ingrese una opcion
+                (1)-Empleado
+                (2)-Almacenamiento""");
+		switch (validarInt(1,2)) {
 			case 1:
 				eliminarEmpleado();
 				break;
+
 			case 2:
 				eliminarAlmacenamiento();
 				break;
-			default:
-				break;
 		}
 	}
-	public static void eliminarEmpleado()
-	{
-		Scanner input = new Scanner(System.in);	
-		System.out.println("ingrese el dni del Empleado a remover");
-		Integer dni = input.nextInt();
-		input.nextLine();
-		switch(tipoEmpleado())
-		{
-		case 1:
-			
-			if(personal.removerPorIdentificador(dni.toString()))
-			{
-				System.out.println("Personal removido con exito!");
-			}
-			else
-			{
-				System.out.println("no se encontro al personal con ese dni");
-			}
-			break;
-		case 2:
-			if(administrativo.removerPorIdentificador(dni.toString()))
-			{
-				System.out.println("Administrativo removido con exito!");
-			}
-			else
-			{
-				System.out.println("no se encontro al administrativo con ese dni");
-			}
-			break;
-			
-			default:
-				break;
-		}
-	}
-	public static void eliminarAlmacenamiento()
-	{
-		Scanner input = new Scanner(System.in);	
-		System.out.println("ingrese el id del producto/estanteria a remover");
-		String idSeleccion = input.nextLine();
-		switch(tipoEmpleado())
-		{
-		case 1:
-			
-			if(almacenamiento.getListaGestora().get(0).removerEstanteria(idSeleccion))
-			{
-				System.out.println("Personal removido con exito!");
-			}
-			else
-			{
-				System.out.println("No se encontro al personal con ese dni");
-			}
-			break;
-		case 2:
-			System.out.println("Ingrese la id donde se encuentra el producto: ");
-			String estanteria = input.nextLine();
-			if(almacenamiento.getListaGestora().get(0).buscarEstanteriaPorID(estanteria).eliminarProducto(idSeleccion))
-			{
-				System.out.println("Producto removido con exito!");
-			}
-			else
-			{
-				System.out.println("No se encontro un producto con ese dni");
-			}
-			break;
-			
-			default:
-				break;
-		}
-	}
- 	private static int opcionTipoObjeto()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese una opcion");
-		System.out.println("(1)-Empleado");
-		System.out.println("(2)-Almacenamiento");
-		return input.nextInt();
-	}
-	private static void crearAlmacenamiento()
-	{
-		Scanner input = new Scanner(System.in);
 
-		switch (opcionesAlmacenamiento())
+	public static void eliminarEmpleado() {
+		System.out.println("Ingrese el dni del Empleado a remover");
+		int dni = validarDNI();
+		System.out.println("""
+                Ingrese el tipo de empleado
+                (1)-Personal
+                (2)-Administrativo""");
+		switch(validarInt(1,2)) {
+
+			case 1:
+
+				if(personal.removerPorIdentificador(Integer.toString(dni))) {
+					System.out.println("Personal removido con exito!");
+				} else {
+					System.out.println("No se encontro al personal con ese dni");
+				}
+				break;
+
+			case 2:
+				if(administrativo.removerPorIdentificador(Integer.toString(dni)))
+					System.out.println("Administrativo removido con exito!");
+				else
+					System.out.println("No se encontro al administrativo con ese dni");
+				break;
+		}
+	}
+
+	public static void eliminarAlmacenamiento() {
+		System.out.println("Ingrese el id del producto/estanteria a remover");
+		String idSeleccion = validarString(36,36);
+		System.out.println("""
+                Ingrese el tipo de empleado
+                (1)-Personal
+                (2)-Administrativo""");
+		switch(validarInt(1,2)) {
+
+			case 1:
+				if(almacenamiento.getListaGestora().getFirst().removerEstanteria(idSeleccion))
+					System.out.println("Personal removido con exito!");
+				else
+					System.out.println("No se encontro al personal con ese dni");
+				break;
+
+			case 2:
+				System.out.println("Ingrese la id donde se encuentra el producto: ");
+				String estanteria = validarString(36,36);
+				if(almacenamiento.getListaGestora().getFirst().buscarEstanteriaPorID(estanteria).eliminarProducto(idSeleccion))
+					System.out.println("Producto removido con exito!");
+				else
+					System.out.println("No se encontro un producto con ese dni");
+				break;
+		}
+	}
+
+	private static void crearAlmacenamiento() {
+		System.out.println("""
+                Ingrese una opcion
+                (1)-crear Estanteria
+                (2)-Ingresar Producto""");
+		switch (validarInt(1,2))
 		{
 			case 1:
 				crearEstanteria();
 				break;
+
 			case 2:
 				crearProducto();
 				break;
 		}
 	}
-	private static void crearProducto()
-	{
-		boolean encontro = false;
+	private static void crearProducto() {
 		Scanner input = new Scanner(System.in);
 		System.out.println("Ingrese la id de la estanteria donde se va a guardar el producto");
 		String id = input.nextLine();
-		try
-		{
-			if(almacenamiento.getListaGestora().get(0).buscarEstanteriaPorID(id)!= null)
-			{
-				System.out.println("Ingrese el nombre del producto");
-				String nombre = input.nextLine();
-				System.out.println("Ingrese la marca del producto");
-				String marca  = input.nextLine();
-				ETipoMedida medida = seleccionarMedida();
-				System.out.println("Ingrese el peso del producto");
-				double peso = input.nextInt();
-				input.nextLine();
-				System.out.println("Ingrese una descripcion del producto");
-				String descripcionAdicional = input.nextLine();
-				System.out.println("Ingrese el precio unitario del producto");
-				double precioUnitario = input.nextInt();
-				input.nextLine();
-				System.out.println("Ingrese el stock del producto");
-				int stock = input.nextInt();
-				input.nextLine();
-				almacenamiento.getListaGestora().get(0).buscarEstanteriaPorID(id).agregarProducto(new Producto(nombre,marca,medida,peso,descripcionAdicional,precioUnitario,stock));
-			}
-			else
-			{
-				System.out.println("No se encontro una estanteria con esa id");
-			}
-		}
-		catch(IllegalArgumentException e)
-		{
-			System.out.println("El id no es valido"+ e.getMessage());
+
+		if(almacenamiento.getListaGestora().getFirst().buscarEstanteriaPorID(id)!= null) {
+			System.out.println("Ingrese el nombre del producto");
+			String nombre = validarString(3,12);
+
+			System.out.println("Ingrese la marca del producto");
+			String marca  = validarString(3,35);
+			ETipoMedida medida = seleccionarMedida();
+
+			System.out.println("Ingrese el peso del producto");
+			double peso = validardouble();
+
+			System.out.println("Ingrese una descripcion del producto");
+			String descripcionAdicional = validarString(5,40);
+
+			System.out.println("Ingrese el precio unitario del producto");
+			double precioUnitario = validardouble();
+
+			System.out.println("Ingrese el stock del producto");
+			int stock = validarInt();
+
+			almacenamiento.getListaGestora().getFirst().buscarEstanteriaPorID(id).agregarProducto(new Producto(nombre,marca,medida,peso,descripcionAdicional,precioUnitario,stock));
+		} else {
+			System.out.println("No se encontro una estanteria con esa id");
 		}
 	}
-	private static ETipoMedida seleccionarMedida()
-	{
-		Scanner input = new Scanner(System.in);
+
+	private static ETipoMedida seleccionarMedida() {
 		System.out.println("Ingrese un tipo de medida(1-kg,2-g,3-l,4-ml)");
-		int medida = input.nextInt();
-		ETipoMedida  e= null;
-		switch (medida)
-		{
+		switch (validarInt(1,4)) {
 			case 1:
-				e = ETipoMedida.KILOGRAMO;
-				break;
+				return ETipoMedida.KILOGRAMO;
+
 			case 2:
-				e =ETipoMedida.GRAMO;
-				break;
+				return ETipoMedida.GRAMO;
+
 			case 3:
-				e = ETipoMedida.LITRO;
-				break;
+				return ETipoMedida.LITRO;
+
 			case 4:
-				e = ETipoMedida.MILILITRO;
-				break;
+				return ETipoMedida.MILILITRO;
+		}
+		return null;
+	}
+
+	private static void crearEstanteria() {
+		System.out.println("ingrese la capacidad de la estanteria");
+		int capacidad = validarInt();
+		almacenamiento.getListaGestora().getFirst().agregarEstanteria(new Estanteria(capacidad));
+	}
+
+	/**
+	 * Metodo que verifica que el valor ingresado sea un entero positivo teniendo en cuenta un limite inferior y superior.
+	 * @return entero positivo ingresado por el usuario.
+	 */
+	private static int validarInt(int base, int tope) {
+		try{
+			int entero = validarInt();
+
+			if (entero > tope)
+				throw new InputMismatchException("usted supero el limite superior");
+			if (entero < base)
+				throw new InputMismatchException("usted no supero el limite inferior");
+			return entero;
+
+		}catch(InputMismatchException ime){
+			System.out.println("Opcion invalida, ingrese una opcion dentro del rango (debe ser entre " + base + " y " + tope + ":" + ime.getMessage());
+			return validarInt(base, tope);
+		}
+	}
+
+	/**
+	 * Metodo que verifica que el valor ingresado sea un entero positivo teniendo en cuenta un limite.
+	 * @return entero positivo ingresado por el usuario.
+	 */
+	private static int validarInt(int limite) {
+		try{
+			int entero = validarInt();
+
+			if (entero > limite) throw new InputMismatchException("el limite del rango es: " + limite);
+			return entero;
+
+		}catch(InputMismatchException ime){
+			System.out.println("Opcion invalida, ingrese una opcion dentro del rango: " + ime.getMessage());
+			return validarInt(limite);
+		}
+	}
+
+	/**
+	 * Metodo que verifica que el valor ingresado sea un entero positivo.
+	 * @return entero positivo ingresado por el usuario.
+	 */
+	private static int validarInt() {
+		Scanner input = new Scanner(System.in);
+		try{
+			int entero = input.nextInt();
+
+			if (entero < 1) throw new InputMismatchException(": el numero no puede ser negativo.");
+			return entero;
+
+		}catch(InputMismatchException ime){
+			System.out.println("Opcion invalida, ingrese una opcion dentro del rango" + ime.getMessage());
+			return validarInt();
+		}
+	}
+
+	private static double validardouble(){
+		Scanner input = new Scanner(System.in);
+		try{
+			double doble = input.nextDouble();
+
+			if (doble <= 0) throw new InputMismatchException(": el numero no puede ser negativo");
+			return doble;
+
+		}catch (InputMismatchException ime){
+			System.out.println("Opcion invalida, ingrese una opcion dentro del rango" + ime.getMessage());
+			return validardouble();
+		}
+	}
+
+	private static int validarDNI(){
+		int dni = validarInt();
+
+		try{
+			if (dni >= 60000000 && dni <= 69999999) throw new InvalidDNIException("El numero del DNI coincide con los reservados para CUIT y CUIL extranjero.");
+			if (dni < 10000000) throw new InvalidDNIException("El numero del DNI es demasiado pequeño como para ser de una edad real.");
+		}catch (InvalidDNIException idnie){
+			System.out.println(idnie.getMessage());
+			return validarDNI();
 		}
 
-		return e;
-	}
-	private static void crearEstanteria()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("ingrese la capacidad de la estanteria");
-		int capacidad = input.nextInt();
-		almacenamiento.getListaGestora().get(0).agregarEstanteria(new Estanteria(capacidad));
-	}
-	private static int opcionesAlmacenamiento()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Ingrese una opcion");
-		System.out.println("(1)-crear Estanteria");
-		System.out.println("(2)-Ingresar Producto");
-		return input.nextInt();
+		return dni;
 	}
 
-	private static int bienvenida()
-	{
+	private static String validarString(int base, int tope){
 		Scanner input = new Scanner(System.in);
-		System.out.println("------Bienvenido----");
-		System.out.println("ingrese su area: ");
-		System.out.println("(1)-Personal");
-		System.out.println("(2)-Administrativo");
-		System.out.println("(3)-Gestor");
-		System.out.println("(0)-salir");
+		String validar = input.next();
 
-		return input.nextInt();
+		try{
+			if (validar.length() > tope)
+				throw new InvalidLengthException("El valor ingresado excede el limite de caracteres (" + tope + ").");
+			if (validar.length() < base)
+				throw new InvalidLengthException("El valor ingresado es demasiado corto, debe superar los (" + base + ") caracteres.");
+			return validar;
+
+		}catch(InvalidLengthException ile){
+			ile.getMessage();
+			return validarString(base, tope);
+		}
 	}
-	private static int seleccionPersonal()
-	{
+
+	private static char validarGenero(){
 		Scanner input = new Scanner(System.in);
-		System.out.println("Seleccione su area:");
-		System.out.println("(1)-Cajero");
-		System.out.println("(2)-Limpiador");
-		System.out.println("(3)-Repositor");
-		return input.nextInt();
+		char validar = input.next().toLowerCase().charAt(0);
+
+		try{
+			if (validar != 'h' && validar != 'm' && validar != 'o')
+				throw new IllegalArgumentException("El valor ingresado no coincide a una de las opciones posibles.");
+		} catch (IllegalArgumentException iae) {
+			System.out.println(iae.getMessage());
+			return validarGenero();
+		}
+
+		return validar;
 	}
-	private static int seleccionAdministrativo()
-	{
-		Scanner input = new Scanner(System.in);
-		System.out.println("Seleccione su area:");
-		System.out.println("(1)-Secretario");
-		System.out.println("(2)-RRHH");
-		System.out.println("(0)-salir");
-		return input.nextInt();
+
+	private static String validarCorreo() {
+		String validar = validarString(15, 42);
+
+		try{
+			if (!validar.contains("@gmail.com") || !validar.contains("@hotmail.com") || !validar.contains("@yahoo.com"))
+				throw new IllegalArgumentException("El valor ingresado no se detecto como una direccion de correo electronico valido.");
+		}catch (IllegalArgumentException iae){
+			System.out.println(iae.getMessage());
+			return validarCorreo();
+		}
+
+		return validar;
 	}
 }
